<resources>
    <string name="app_name">ToDo App</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="done">done</string>
    <string name="info">info</string>
    <string name="add_button">add button</string>
    <string name="importance">Важность</string>
    <string name="works">Мои дела</string>
    <string name="example_work_done">Выполнено - 5</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="cross">cross</string>
    <string name="what_to_do">Что надо сделать…</string>
    <string name="No">Нет</string>
    <string name="make_up">Сделать до</string>
    <string name="example_date">2 июня 2021</string>
    <string name="delete">Удалить</string>
    <string name="warn">!!</string>
    <string name="trash">trash</string>
    <string name="edit">Изменить</string>
    <string name="successfully_removed">Удалено</string>
    <string name="undo">Отменить</string>
    <string name="bad_internet_connection">"Плохое интернет соединение, попробуйте позже"</string>
    <string name="no_internet_connection">"Нет интернет соединения"</string>
    <string name="item_not_found">"Дело было удалено, попытка сохранить"</string>
    <string name="item_saved">"Дело успешно сохранено"</string>\
    <string name="item_not_saved">"Дело не было сохранено, попробуйте позже…"</string>
    <string name="new_item">"Были полученные новые данные, производится замена"</string>
    <string name="can_not_delete">"Не удалось удалить элемент"</string>
    <string name="retry">"Повторить"</string>
    <string name="theme">Тема</string>
    <string name="expand">Развернут\n</string>
    <string name="collapse">Свернут\n</string>
    <string name="notification">Уведомление</string>
    <string name="cancel">Отменить</string>
    <string name="notification_time">Время уведомлений:</string>
    <string name="midnight">00:00</string>
    <string-array name="importances">
        <item>Низкая</item>
        <item>Нет</item>
        <item>!! Высокая</item>
    </string-array>

    <string-array name="theme">
        <item>Всегда светлая</item>
        <item>Всегда темная</item>
        <item>Как в системе</item>
    </string-array>
</resources>