<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.todoapp.TodoItemsFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/list_fragment">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"/>

        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left"
            />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.todoapp.AddItemFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/add_item_fragment">
    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.todoapp.fragments.SettingsFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/settings_fragment">
    </fragment>
</navigation>