<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="10dp"
<<<<<<< Updated upstream
    app:cardElevation="6dp">
=======
    app:cardElevation="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:backgroundTint="?attr/back_secondary">
>>>>>>> Stashed changes

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/done"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:contentDescription="@string/done"
            android:focusable="true"
            android:src="@drawable/undone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/importance"
            android:text="@string/warn"
<<<<<<< Updated upstream
            android:textColor="?attr/color_red"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/deadline"
            app:layout_constraintEnd_toStartOf="@id/body"
=======
            style="@style/alert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/done"
>>>>>>> Stashed changes
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/body"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            style="@style/based"
            app:layout_constraintBottom_toTopOf="@id/deadline"
            app:layout_constraintEnd_toStartOf="@id/info"
            app:layout_constraintStart_toEndOf="@id/done"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deadline"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            style="@style/small_supporting"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/importance"
            app:layout_constraintTop_toBottomOf="@id/body" />

        <ImageView
            android:id="@+id/info"
            android:layout_width="18dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/info"
            android:src="@drawable/info"
            app:tint="?attr/label_tertiary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>