<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/back_primary"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ToDoApp.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryVariant"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.ToDoApp.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/works"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/works"
                        android:textColor="?attr/label_primary"
                        android:textSize="32sp"
                        app:layout_constraintStart_toStartOf="@id/works_done"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/works_done"
                        />

                    <TextView
                        android:id="@+id/works_done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/works"
                        android:layout_marginStart="40dp"
                        android:text="@string/example_work_done"
                        android:textSize="16sp"
                        android:textColor="?attr/label_tertiary"
                        />

                    <ImageView
                        android:id="@+id/visibility"
                        android:layout_width="22dp"
                        android:layout_height="18dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="@id/works_done"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/visibility"
                        app:tint="?attr/color_blue" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:listitem="@layout/todo_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/color_blue"
        android:contentDescription="@string/add_button"
        app:srcCompat="@drawable/plus"
        app:tint="?attr/color_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>